--- a/circle.yml
+++ b/circle.yml
@@ -8,5 +8,5 @@ jobs:
 
     steps:
         - checkout
-        - run: rm -r ~/.gradle || true
+        - run: gvt fetch -branch $CIRCLE_BRANCH github.com/byuoitav/common
         - run: go test -v -race $(go list ./... | grep -v /vendor/)
